# fastapi-mongo

./: .env.docker-compose.fastapi  .env.docker-compose.flower  .env.docker-compose.redis  .gitignore  Dockerfile  Dockerfile-api  Dockerfile-rabbitmq  Dockerfile-worker  LICENSE  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  rabbitmq.conf  receive.py  send.py  worker.py
config/: config.py  settings.py
database/: database.py
message_broker/: pika_client.py
models/: __init__.py  spring.py  student.py
routes/: pika.py  spring.py  student.py
schemas/: message.py  spring.py  student.py
