[tool.poetry]
name = "fastapi-mongo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "^0.5.0"
anyio = "^3.7.1"
bcrypt = "^4.0.1"
beanie = "^1.22.6"
certifi = "^2023.7.22"
click = "^8.1.7"
dnspython = "^2.4.2"
email-validator = "^2.0.0.post2"
exceptiongroup = "^1.1.3"
fastapi = "^0.110"
h11 = "^0.14.0"
httpcore = "^0.18.0"
httpx = "^0.25.0"
idna = "^3.4"
iniconfig = "^2.0.0"
lazy-model = "^0.2.0"
mongomock = "^4.1.2"
mongomock-motor = "^0.0.21"
motor = "^3.3.1"
packaging = "^23.2"
passlib = "^1.7.4"
pluggy = "^1.3.0"
pydantic = "^2.4.2"
pydantic-core = "^2.10.1"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
pymongo = "^4.5.0"
sentinels = "^1.0.0"
sniffio = "^1.3.0"
starlette = "^0.36.0"
toml = "^0.10.2"
tomli = "^2.0.1"
typing-extensions = "^4.8.0"
uvicorn = "^0.23.2"

[tool.poetry.scripts]
start = "app:start"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
